--- a/src/styles.less
+++ b/src/styles.less
@@ -42,17 +42,6 @@ body {
   border-top: 0 !important;
 }
 
-.panel-block-title {
-  margin: -0.5em -0.75em;
-  min-width: 528px;
-}
-
-.panel-block-children {
-  margin-top: 0.75rem;
-  padding-left: 1rem;
-  // border-left: 4px solid #bbbbbb;
-}
-
 .is-hidden-with-transition {
   max-height: 0 !important;
   margin: 0;
